apps/headlamp/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: headlamp
    namespace: headlamp
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.middlewares: headlamp-forward-auth-no-bearer@kubernetescrd
spec:
    ingressClassName: traefik
    rules:
        - host: k8s.example.com
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: headlamp
                        port:
                            number: 80
    tls:
        - hosts:
            - k8s.example.com
          secretName: wildcard-tls
